--- a/dashboard1/package.json
+++ b/dashboard1/package.json
@@ -23,13 +23,17 @@
   "homepage": "https://github.com/MrAugu/discord-bot-dashboard#readme",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "canvacord": "^5.0.8",
+    "discord-xp": "^1.1.7",
     "discord.js": "^12.1.1",
     "ejs": "^3.0.2",
     "express": "^4.17.1",
     "express-session": "^1.17.0",
     "memorystore": "^1.6.2",
     "mongoose": "^5.9.9",
+    "nodemon": "^2.0.7",
     "passport": "^0.4.1",
-    "passport-discord": "^0.1.3"
+    "passport-discord": "^0.1.3",
+    "wokcommands": "^1.2.1"
   }
 }
